<resources>
    <string name="app_name">EYLock</string>
    <string name="text_email">E-mail</string>
    <string name="text_email_hint">E-mail</string>
    <string name="text_password_hint">Password</string>
    <string name="text_login">Login</string>
    <string name="text_show_lock_event_list">Show Lock Event List</string>
    <string name="add_new_user">Add New User</string>
    <string name="add_new_lock">Add New Lock</string>
    <string name="label_save">Save</string>
    <string name="hint_name_surname">Name surname</string>
    <string name="text_admin_login">Admin Login</string>
</resources>
