<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_login_lock_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/ic_lock_icon" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultPadding"
            android:layout_marginEnd="@dimen/defaultPadding"
            android:layout_marginTop="@dimen/defaultPadding"
            android:hint="@string/text_email_hint"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultPadding"
            android:layout_marginEnd="@dimen/defaultPadding"
            android:hint="@string/text_password_hint"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>